<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.leofontes.outlethelper.Discount"
    tools:showIn="@layout/app_bar_discount">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/originalPriceInput"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/originalPriceInput"
        android:layout_centerHorizontal="true"
        android:text="@string/original_price_label"
        android:textSize="28sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:text="@string/discount_label"
        android:textSize="28sp"
        android:layout_below="@+id/discountSeekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/discountSeekBar"
        android:max="100"
        android:indeterminate="false"
        android:progress="15"
        android:focusableInTouchMode="false"
        android:progressTint="@color/blue"
        android:thumbTint="@color/veryDarkBlue"
        android:layout_below="@+id/seekBarValue"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarValue"
        android:text="10%"
        android:textSize="50sp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalPriceLabel"
        android:textSize="50sp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="$0.00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:text="@string/final_price_label"
        android:textSize="28sp"
        android:layout_below="@+id/finalPriceLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/no_taxes_label"
        android:textSize="14sp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
