<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.leofontes.outlethelper.SinglePrice"
    tools:showIn="@layout/app_bar_single_price">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_label"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="28sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/inputBuy"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_label"
        android:id="@+id/textView7"
        android:textSize="28sp"
        android:layout_below="@+id/inputBuy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/inputFree"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_price_label"
        android:id="@+id/textView8"
        android:textSize="28sp"
        android:layout_below="@+id/inputFree"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputBasePrice"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_label"
        android:id="@+id/button"
        android:background="@color/darkBlue"
        android:textColor="@color/white"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:nestedScrollingEnabled="false"
        android:onClick="calcSinglePrice"
        android:layout_below="@+id/inputBasePrice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:id="@+id/outputSinglePrice"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="50sp" />

</RelativeLayout>
